kustomizations/streaming/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
      app.kubernetes.io/name: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/part-of: streaming-stack
    spec:
      enableServiceLinks: false
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:12
        ports:
        - containerPort: 8096
          protocol: TCP
        - containerPort: 8920
          protocol: TCP
        - containerPort: 7359
          protocol: UDP
        - containerPort: 1900
          protocol: UDP
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "4"
            memory: "8Gi"
        securityContext:
          privileged: true
          # allowPrivilegeEscalation: false
          capabilities:
            add: ["SYS_RAWIO", "SETPCAP", "SYS_ADMIN"]
        # startupProbe:
        #   httpGet:
        #     path: /
        #     port: 8096
        #   failureThreshold: 30
        #   periodSeconds: 10
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8096
        #   initialDelaySeconds: 30
        #   periodSeconds: 20
        #   timeoutSeconds: 5
        #   failureThreshold: 5
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: 8096
        #   initialDelaySeconds: 10
        #   periodSeconds: 10
        #   timeoutSeconds: 3
        #   failureThreshold: 3
        volumeMounts:
        - name: dri
          mountPath: /dev/dri
          readOnly: false
        - name: shm
          mountPath: /dev/shm
        - name: transcodes
          mountPath: /cache/transcodes
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
        - name: music
          mountPath: /music
        - name: playlists
          mountPath: /music/playlists
          readOnly: true
      nodeSelector:
        kubernetes.io/hostname: castillo
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        # Group id (992) can be found running 
        # getent group render | cut -d: -f3
        supplementalGroups: [44, 107, 992]
      volumes:
      - name: dri
        hostPath:
          path: /dev/dri
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
      - name: transcodes
        emptyDir:
          medium: Memory
          sizeLimit: 6Gi
      - name: config
        hostPath:
          path: /mnt/jellyfin
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /media
          type: DirectoryOrCreate
      - name: music
        hostPath:
          path: /mnt/music
      - name: playlists
        configMap:
          name: shared-playlists
