kustomizations/streaming/jellyfin/replica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-replica
  namespace: streaming
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-replica
      app.kubernetes.io/name: jellyfin-replica
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin-replica
        app.kubernetes.io/name: jellyfin-replica
        app.kubernetes.io/part-of: streaming-stack
    spec:
      enableServiceLinks: false
      containers:
      - name: jellyfin-replica
        image: jellyfin/jellyfin:latest
        ports:
        - containerPort: 8096
          protocol: TCP
        - containerPort: 8920
          protocol: TCP
        - containerPort: 7359
          protocol: UDP
        - containerPort: 1900
          protocol: UDP
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "4Gi"
        securityContext:
          privileged: true
          capabilities:
            drop: ["ALL"]
            add: ["SYS_RAWIO", "SETPCAP", "SYS_ADMIN"]
        startupProbe:
          httpGet:
            path: /health
            port: 8096
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 10
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8096
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        volumeMounts:
        - name: dri 
          mountPath: /dev/dri
          readOnly: false
        - name: shm
          mountPath: /dev/shm
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      nodeSelector:
        kubernetes.io/hostname: catimore
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        # Group id (992) can be found running 
        # getent group render | cut -d: -f3
        supplementalGroups: [44, 107, 992]
      volumes:
      - name: dri
        hostPath:
          path: /dev/dri
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: 512Mi
      - name: config
        hostPath:
          path: /mnt/jellyfin
          type: DirectoryOrCreate
      - name: media
        hostPath:
          path: /media
          type: DirectoryOrCreate
