kustomizations/streaming/jellyfin/jfa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jfa-go
  namespace: streaming
  labels:
    app: jfa-go
    app.kubernetes.io/name: jfa-go
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: jfa-go
  ports:
  - name: http
    port: 8057
    targetPort: 8057
  - name: tls
    port: 8056
    targetPort: 8056
