kustomizations/streaming/jellyfin/replica-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-replica
  namespace: streaming
  labels:
    app: jellyfin-replica
    app.kubernetes.io/name: jellyfin-replica
    app.kubernetes.io/part-of: streaming-stack
spec:
  selector:
    app: jellyfin-replica
  ports:
  - name: http
    port: 8096
    targetPort: 8096
  - name: udp
    protocol: UDP
    port: 7359
    targetPort: 7359
