kustomizations/streaming/jellyfin/server-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: streaming
  annotations:
    external-dns.alpha.kubernetes.io/hostname: habiflix.lan
  labels:
    app: jellyfin
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/part-of: streaming-stack
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.40
  selector:
    app: jellyfin
  ports:
  - name: lb
    port: 80
    targetPort: 8096
  - name: http
    port: 8096
    targetPort: 8096
