kustomizations/streaming/jellyfin/swarm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyswarm
  namespace: streaming
  annotations:
    external-dns.alpha.kubernetes.io/hostname: habiflix.lan
  labels:
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.40
  selector:
    app: jellyswarm
  ports:
  - name: lb
    port: 80
    targetPort: 3000
  - name: http
    port: 3000
    targetPort: 3000
