kustomizations/streaming/jellyfin/jfa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jfa-go
  namespace: streaming
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: authflix.citocafecito.work
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jfa-go
              port:
                number: 8056
