kustomizations/streaming/jellyfin/replica-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-replica
  namespace: streaming
spec:
  rules:
  - host: replicafix.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyfin-replica
              port:
                number: 8096
