kustomizations/streaming/jellyfin/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  namespace: streaming
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: streaming-redirect-forgot-password@kubernetescrd
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: habiflix.citocafecito.work
    http:
      paths:
        # - path: /metrics
        #   pathType: Prefix
        #   backend:
        #     service:
        #       name: traefik-noop
        #       port:
        #         number: 80
        - path: /jfa
          pathType: Prefix
          backend:
            service:
              name: jfa-go
              port:
                number: 8056
        - path: /invite
          pathType: Prefix
          backend:
            service:
              name: jfa-go
              port:
                number: 8056
        - path: /my/account
          pathType: Prefix
          backend:
            service:
              name: jfa-go
              port:
                number: 8056
        - path: /web/#/forgotpassword
          pathType: Prefix  
          backend:
            service:
              name: jfa-go
              port:
                number: 8056
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyfin
              port:
                number: 8096
