kustomizations/streaming/jellyfin/swarm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyswarm
  namespace: streaming
spec:
  ingressClassName: traefik
  rules:
  - host: jellyswarm.lan
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jellyswarm
              port:
                number: 3000
